<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.event.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.event.ui.user.UserFragment"
        android:label="@string/title_user" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.event.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.event.ui.login.LoginFragment"
        android:label="Logowanie"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_user"
            app:destination="@id/navigation_user" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.event.ui.register.RegisterFragment"
        android:label="Rejestracja"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_user"
            app:destination="@id/navigation_user" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.example.event.ui.home.EventDetailFragment"
        android:label="Szczegóły wydarzenia"
        tools:layout="@layout/fragment_event_detail" />
    <action
        android:id="@+id/action_home_to_eventDetail"
        app:destination="@id/eventDetailFragment" />
</navigation>
